src/objects/acfDealIQ_Condition__c.object
<CustomObject>
    <fields>
        <fullName>acfCategory__c</fullName>
        <formula>TEXT(acfGlobal_DealIQ_Rule__r.Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfClick_Loans_Bank_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Click Loans Bank Detail</label>
        <referenceTo>acfBank_Detail__c</referenceTo>
        <relationshipLabel>DealIQ Conditions</relationshipLabel>
        <relationshipName>DealIQ_Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>acfClick_Loans_Suggested_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Click Loans Suggested Product</label>
        <referenceTo>acfSuggested_Product__c</referenceTo>
        <relationshipLabel>DealIQ Conditions</relationshipLabel>
        <relationshipName>DealIQ_Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>acfComments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>acfCondition_Closed_DateTime__c</fullName>
        <label>Condition Closed DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>acfGlobal_DealIQ_Rule__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Global DealIQ Rule</label>
        <referenceTo>Global_DealIQ_Condition__c</referenceTo>
        <relationshipLabel>DealIQ Conditions</relationshipLabel>
        <relationshipName>DealIQ_Conditions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>acfOpportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>DealIQ Conditions</relationshipLabel>
        <relationshipName>acf_DealIQ_Conditions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>acfProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>DealIQ Conditions</relationshipLabel>
        <relationshipName>DealIQ_Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>acfStatus__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Mitigated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Mitigated</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>acfSystem_Mitigated_Notes__c</fullName>
        <label>System Mitigated Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>acfTrigger_String__c</fullName>
        <label>Trigger String</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>acfUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DealIQ_ConditionsUser1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>DealIQ Condition</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DealIQ Condition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DealIQ Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>